# ecoindex_python

./: .dockerignore  .gitignore  README.md  dkt.py  main.py  pyproject.toml  requirements.txt  test.py
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  bug_report.md
.github/config/: changelog.json
.github/workflows/: changelog.yml  codeQL.yml  publish.yml  quality.yml  update-reference-values.yml
docker/scraper/: Dockerfile
ecoindex/: __init__.py  ecoindex.py  models.py  scrap.py  utils.py
ecoindex/api/: main.py
ecoindex/api/config/: __init__.py  settings.py
ecoindex/api/database/: schema.prisma
ecoindex/api/middleware/: __init__.py  health.py
ecoindex/api/routes/: __init__.py  ecoindex.py  host.py  task.py
ecoindex/api/utils/: generate_uuid.py
ecoindex/backend/: __init__.py
ecoindex/backend/api/: main.py
ecoindex/backend/api/dependencies/: __init__.py  common.py  ecoindex.py  pagination.py
ecoindex/backend/api/middleware/: __init__.py  exception_handlers.py  health.py
ecoindex/backend/api/routes/: __init__.py  ecoindex.py  host.py
ecoindex/backend/api/utils/: sorting.py
ecoindex/backend/database/: engine.py  schema.prisma
ecoindex/backend/database/migrations/20230925150614_init_database/: migration.sql
ecoindex/backend/database/migrations/20230926152936_add_requests_details/: migration.sql
ecoindex/backend/database/repository/: ecoindex.py  host.py
ecoindex/cli/: api_data.py
ecoindex/compute/: __init__.py  ecoindex.py
ecoindex/compute/data/: __init__.py
ecoindex/data/: __init__.py
ecoindex/models/: __init__.py  api.py  compute.py  response_examples.py
ecoindex/scraper/: __init__.py  scrap.py  utils.py
scripts/: update_values.py
tests/: test_ecoindex.py  test_models.py
tests/compute/: test_ecoindex.py  test_models.py
tests/scraper/: docker.py  test_init.py  test_scraper.py
tests/scraper/fixtures/performance_logs/: metyis.com.json  www.ecoindex.fr.json  www.greenit.fr.json  www.kleegroup.com.json
